metadata/force-app/main/default/objects/ccrz__E_CompositeProduct__c/fields/ccrz__Component__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The child product that is part of the bundle, kit or aggregated product</description>
    <label>Component</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Composite Products (Component)</relationshipLabel>
    <relationshipName>Composite_Products</relationshipName>
    <type>Lookup</type>
</CustomField>