metadata/force-app/main/default/objects/ccrz__E_CompositeProduct__c/fields/ccrz__Composite__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Composite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The main product - this would be the bundle, kit or aggregated main product</description>
    <label>Composite</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Composite Products</relationshipLabel>
    <relationshipName>CompositeProducts</relationshipName>
    <type>Lookup</type>
</CustomField>