metadata/force-app/main/default/objects/ccrz__E_CompositeProduct__c/fields/ccrz__Description__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Description__c</fullName>
    <description>Holds any informational text describing the composite&apos;s relationship with its parent product.</description>
    <inlineHelpText>Holds any informational text describing the composite&apos;s relationship with its parent product.</inlineHelpText>
    <label>Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>