metadata/force-app/main/default/objects/ccrz__E_CompositeProduct__c/fields/ccrz__Optional__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated</description>
    <label>Optional</label>
    <type>Checkbox</type>
</CustomField>