metadata/force-app/main/default/objects/ccrz__E_CompositeProduct__c/fields/ccrz__Parent__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in the event that a child of an bundle, kit or aggregated product is itself a bundle, kit or aggregated product.</description>
    <label>Parent</label>
    <referenceTo>ccrz__E_CompositeProduct__c</referenceTo>
    <relationshipLabel>Child Composite Products</relationshipLabel>
    <relationshipName>ChildCompositeProducts</relationshipName>
    <type>Lookup</type>
</CustomField>