metadata/force-app/main/default/objects/ccrz__E_CompositeProduct__c/fields/ccrz__ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Maps this component to a related product grouping.  This is primarily utilized in the case of dynamic kits, where the composite products are grouped together into separate steps or sections.</description>
    <inlineHelpText>Maps this component to a related product grouping.  This is primarily utilized in the case of dynamic kits, where the composite products are grouped together into separate steps or sections.</inlineHelpText>
    <label>Product Group</label>
    <referenceTo>ccrz__E_RelatedProductGroup__c</referenceTo>
    <relationshipLabel>CC Composite Products</relationshipLabel>
    <relationshipName>CC_Composite_Products</relationshipName>
    <type>Lookup</type>
</CustomField>